# virtualsoft-mamba

./: .dockerignore  .env  .gcloudignore  .gitignore  Dockerfile  Dockerfile.base  Mamba.py  cloudbuild.base.yaml  cloudbuild.yaml  deploy.sh  deploy_base.sh  eval_contrastive_clusters.py  launch_experiments.py  model_arch.py  preprocessing.py  pyproject.toml  requirements.txt  split_estratificado_uids.json  submit_experiments.sh  vertex_job.yaml
